--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,11 @@
 			<version>2.1.2</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-websocket</artifactId>
+		</dependency>
+
     </dependencies>
 
 	<build>
