Configuraciones para deploy en heroku

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.jpa.database-futbolify = org.hibernate.dialect.PostgreSQL9Dialect
 management.endpoint.shutdown.enabled = true
 management.endpoint.info.enabled = true
 management.endpoints.web.exposure.include = *
+server.port=${PORT:8080}
